# Claude-checkpoint

./: README.md  design_guidelines.json  vercel.json
.emergent/: emergent.yml
backend/: pyproject.toml  requirements.txt  server.py
backend/tests/: test_reviews_api.py
case_study/: INDEX.md  capture_screenshots.py
frontend/: craco.config.js  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ActionBar.tsx  ChallengeResultsSection.tsx  ChatInput.tsx  ConversationMessage.tsx  DecisionBadge.tsx  ReviewPanel.tsx  ReviewSummary.tsx  Sidebar.tsx  SignalPill.tsx  Toast.tsx  TypingIndicator.tsx  WelcomeState.tsx
frontend/src/components/execution/: ActivityTimeline.tsx  ChangeSummary.tsx  DiffSection.tsx  DiffViewer.tsx  ExecutionReviewPanel.tsx  ExecutionSummary.tsx  FileExplorer.tsx  FileRow.tsx  ProtectedFilesPanel.tsx  RollbackButton.tsx  TimelineItem.tsx
frontend/src/data/: executionMock.ts  mockData.ts
frontend/src/lib/: api.ts
frontend/src/lib/evaluation/: AnnotationMapper.ts  AssumptionDetector.ts  ContextDetector.ts  EvaluationEngine.ts  ReviewSummaryGenerator.ts  VerificationDetector.ts  index.ts  types.ts
frontend/src/state/: useConversation.ts
memory/: PRD.md
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json  iteration_4.json  iteration_5.json
test_reports/pytest/: pytest_results.xml
