[project]
name = "claude-checkpoint-backend"
version = "0.1.0"
description = "Claude Checkpoint review-decisions API."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "motor==3.6.0",
    "pymongo==4.9.2",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
]

[tool.vercel]
entrypoint = "server:app"
